--- a/src/ngsw-config.json
+++ b/src/ngsw-config.json
@@ -36,7 +36,7 @@
       "cacheConfig": {
         "stategy": "freshness",
         "maxSize": 20,
-        "maxAge": "1s",
+        "maxAge": "1h",
         "timeout": "5s"
       }
     }
